--- a/index.html
+++ b/index.html
@@ -58,5 +58,9 @@
     <footer class="footer">
         <img class="footer__logo" src="imagenes/logo-mls-inter-miami.svg" alt="Logo MLS" width="200">
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
+
+    <script src="main.js"></script>
 </body>
 </html>
